infra/manifests/kube-prometheus-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
