infra/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-app
  namespace: default
  labels:
    app: my-go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-go-app
  template:
    metadata:
      labels:
        app: my-go-app
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
      - name: my-go-app
        image: trnimagestorage.azurecr.io/my-go-app:v0.3.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-go-app
  namespace: default
spec:
  selector:
    app: my-go-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: web
